--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "dependencies": {
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.3.2",
+    "@nestjs/mapped-types": "^2.0.5",
+    "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^10.3.2",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
   },
